# HomologarProductosProd

./: .gitignore  Dockerfile  README.md  config.yaml  entrypoint.sh  pyproject.toml
reports/: export-run-42.xlsx  export.xlsx
src/homologador/: __init__.py  cli.py  config.py  cord_api.py  cord_scraper.py  discovery.py  engine.py  export.py  http.py  matching.py  models.py  normalize.py  report.py  scheduler.py  stats.py  storage.py  vtex_client.py
src/homologador/comparators/: __init__.py  attributes.py  base.py  description.py  name.py  price.py  variants.py
templates/: index.html.j2  run.html.j2  trends.html.j2
