[project]
name = "homologador"
version = "0.1.0"
description = "Homologador de productos CoRD <-> VTEX (Oechsle)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3",
    "rapidfuzz>=3.0",
    "jinja2>=3.1",
    "tenacity>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
homologador = "homologador.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
